--- a/Module15_WebBlazor/Components/Pages/Counter.razor
+++ b/Module15_WebBlazor/Components/Pages/Counter.razor
@@ -7,6 +7,11 @@
 
 <p role="status">Current count: @currentCount</p>
 
+@if (currentCount > 3)
+{
+    <p>You win!</p>
+}
+
 <button class="btn btn-primary" @onclick="IncrementCount">Click me</button>
 
 @code {
@@ -19,5 +24,6 @@
     private void IncrementCount()
     {
         currentCount += IncrementAmount;
+        
     }
 }
