--- a/Module17_XAML_1/Notes/MainPage.xaml
+++ b/Module17_XAML_1/Notes/MainPage.xaml
@@ -3,6 +3,9 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Notes.MainPage">
 			 
+    <VerticalStackLayout Margin="30,60,30,30">
+
+    </VerticalStackLayout>
    
  
 </ContentPage>
