--- a/Module19_WPF/WpfApp1/MainWindow.xaml
+++ b/Module19_WPF/WpfApp1/MainWindow.xaml
@@ -5,8 +5,30 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WpfApp1"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
-    <Grid>
-        
-    </Grid>
+        Height="450" Width="920"
+        WindowStyle="None" ResizeMode="NoResize" Background="Transparent"
+        AllowsTransparency="True">
+
+    <Border Background="#272537"
+        CornerRadius="25">
+        <Grid>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="200"/>
+                <ColumnDefinition/>
+            </Grid.ColumnDefinitions>
+
+            <Grid.RowDefinitions>
+                <RowDefinition Height="75"/>
+                <RowDefinition/>
+            </Grid.RowDefinitions>
+            
+        <TextBlock Text="418"
+                   VerticalAlignment="Center"
+                   HorizontalAlignment="Center"
+                   Foreground="White"
+                   FontSize="22"/>
+
+        </Grid>
+
+    </Border>
 </Window>
