--- a/Module19_WPF/WpfApp1/MainWindow.xaml
+++ b/Module19_WPF/WpfApp1/MainWindow.xaml
@@ -52,7 +52,16 @@
                     FontSize="14"
                     Style="{StaticResource MenuButtonTheme}"
                     />
+       
             </StackPanel>
+
+            <TextBox Width="500"
+                     Height="40"
+                     VerticalAlignment="Center"
+                     HorizontalAlignment="Left"
+                     Margin="25,5,5,5"
+                     Grid.Column="1"
+                     Style="{StaticResource ModerneTexBox}"/>
 
         </Grid>
 
