--- a/Module19_WPF/WpfApp1/Theme/TextBoxTheme.xaml
+++ b/Module19_WPF/WpfApp1/Theme/TextBoxTheme.xaml
@@ -5,11 +5,11 @@
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type TextBox}">
+                    
                     <Border CornerRadius="10"
                             Background="#353340"
-                            Width="200"
-                            Height="40"
-                            >
+                            Width="500"
+                            Height="40">
 
                         <Grid>
                             <Rectangle StrokeThickness="1"/>
@@ -19,7 +19,9 @@
                                      Background="Transparent"
                                      VerticalAlignment="Center"
                                      Padding="5"
-                                     Foreground="#CFCFCF"/>
+                                     Foreground="#CFCFCF"
+                                     x:Name="SearchBox"/>
+                            
                             <TextBlock IsHitTestVisible="False"
                                        Text="Search"
                                        VerticalAlignment="Center"
@@ -29,7 +31,7 @@
                                        Foreground="DarkGray"
                                        Grid.Column="1">
                                 <TextBlock.Style>
-                                    <Style TargetType="{x:Type TextBox}">
+                                    <Style TargetType="{x:Type TextBlock}">
                                         <Style.Triggers>
                                             <DataTrigger Binding="{Binding Text, ElementName=SearchBox}" Value="">
                                                 <Setter Property="Visibility" Value="Visible"/>
@@ -42,6 +44,7 @@
                         </Grid>
                         
                     </Border>
+                    
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
