WPF base complete

--- a/Module19_WPF/WpfApp1/App.xaml
+++ b/Module19_WPF/WpfApp1/App.xaml
@@ -17,6 +17,10 @@
                 <view:HomeView/>
             </DataTemplate>
 
+            <DataTemplate DataType="{x:Type viewModel:FamillyViewModel}">
+                <view:FamillyView/>
+            </DataTemplate>
+
         </ResourceDictionary>
         
     </Application.Resources>
