--- a/Module19_WPF/WpfApp1/MainWindow.xaml
+++ b/Module19_WPF/WpfApp1/MainWindow.xaml
@@ -4,11 +4,16 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WpfApp1"
+        xmlns:viewModel ="clr-namespace:WpfApp1.MVVM.ViewModel"
         mc:Ignorable="d"
-        Height="450" Width="920"
+        Height="550" Width="900"
         WindowStyle="None" ResizeMode="NoResize" Background="Transparent"
         AllowsTransparency="True">
 
+    <Window.DataContext>
+        <viewModel:MainViewModel/>
+    </Window.DataContext>
+    
     <Border Background="#272537"
         CornerRadius="25">
         <Grid>
@@ -35,14 +40,17 @@
                     Foreground="White"
                     FontSize="14"
                     Style="{StaticResource MenuButtonTheme}"
+                    IsChecked="True"
+                    Command="{Binding HomeViewCommand}"
                     />
                 
                 <RadioButton
-                    Content="Discovery"
+                    Content="Random Familly"
                     Height="50"
                     Foreground="White"
                     FontSize="14"
                     Style="{StaticResource MenuButtonTheme}"
+                    Command="{Binding FamillyViewCommand}"
                     />
                 
                 <RadioButton
@@ -65,7 +73,8 @@
 
             <ContentControl Grid.Row="1"
                             Grid.Column="1"
-                            Margin="10"/>
+                            Margin="10"
+                            Content="{Binding CurrentView}" />
             
         </Grid>
 
