--- a/Module19_WPF/WpfApp1/MVVM/View/HomeView.xaml
+++ b/Module19_WPF/WpfApp1/MVVM/View/HomeView.xaml
@@ -5,9 +5,9 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:WpfApp1.MVVM.View"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
+             d:DesignHeight="460" d:DesignWidth="800">
 
-    <StackPanel>
+    <StackPanel Margin="0,0,0,10">
         <TextBlock Text="Discover"
                    Foreground="White"
                    FontSize="28"
