--- a/Module20_WPF_Testing/FamillyBrowservV2/MainWindow.xaml
+++ b/Module20_WPF_Testing/FamillyBrowservV2/MainWindow.xaml
@@ -3,10 +3,92 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:MaterialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         xmlns:local="clr-namespace:FamillyBrowservV2"
         mc:Ignorable="d"
-        Title="Familly Browser" Height="450" Width="800">
-    <Grid>
         
+        Height="850" Width="1200"
+        WindowStartupLocation="CenterOwner"
+        WindowStyle="None" ResizeMode="NoResize"
+        Background="{x:Null}"
+        AllowsTransparency="True"
+        >
+    <Grid>
+        <MaterialDesign:Card Margin="10"
+                             UniformCornerRadius="20">
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="1*"/>
+                    <ColumnDefinition Width="15*"/>
+                </Grid.ColumnDefinitions>
+
+                <Grid.Resources>
+                    <Style TargetType="MaterialDesign:PackIcon">
+                        <Setter Property="Width" Value="30"/>
+                        <Setter Property="Height" Value="30"/>
+                    </Style>
+                </Grid.Resources>
+
+                <!-- Menu --> 
+                <Grid Grid.Column="0">
+                    <ListView Margin="0 40">
+                        
+                        <ListViewItem HorizontalAlignment="Center"
+                                      Margin="0 10 0 0">
+                            <Button Style="{StaticResource MaterialDesignFloatingActionButton}"
+                                    HorizontalAlignment="Left"
+                                    BorderBrush="{x:Null}" Background="{x:Null}" Foreground="Black">
+                                <StackPanel Margin="-5">
+                                    <MaterialDesign:PackIcon Kind="Home"/>
+                                </StackPanel>
+                            </Button>
+                        </ListViewItem>
+                        
+                        <ListViewItem HorizontalAlignment="Center"
+                                      Margin="0">
+                            <Button Style="{StaticResource MaterialDesignFloatingActionButton}"
+                                    HorizontalAlignment="Left"
+                                    BorderBrush="{x:Null}" Background="{x:Null}" Foreground="Black">
+                                <StackPanel Margin="-5">
+                                    <MaterialDesign:PackIcon Kind="CircleSlice3"/>
+                                </StackPanel>
+                            </Button>
+                        </ListViewItem>
+
+                        <ListViewItem HorizontalAlignment="Center"
+                                      Margin="0">
+                            <Button Style="{StaticResource MaterialDesignFloatingActionButton}"
+                                    HorizontalAlignment="Left"
+                                    BorderBrush="{x:Null}" Background="{x:Null}" Foreground="Black">
+                                <StackPanel Margin="-5">
+                                    <MaterialDesign:PackIcon Kind="EqualiserVertical"/>
+                                </StackPanel>
+                            </Button>
+                        </ListViewItem>
+
+                        <ListViewItem HorizontalAlignment="Center"
+                                      Margin="0 150 0 0"
+                                      >
+                            <Button Style="{StaticResource MaterialDesignFloatingActionButton}"
+                                    HorizontalAlignment="Left"
+                                    BorderBrush="{x:Null}" Background="{x:Null}" Foreground="Black">
+                                <StackPanel Margin="-5">
+                                    <MaterialDesign:PackIcon Kind="ExitToApp"/>
+                                </StackPanel>
+                            </Button>
+                        </ListViewItem>
+
+                    </ListView>
+                    
+                </Grid>
+                
+                <!-- RenderPannel -->
+                <Grid Grid.Column="1"
+                      Background="#F6F5F8" Name="RenderPages">
+                    
+                </Grid>
+                
+            </Grid>
+        </MaterialDesign:Card>
     </Grid>
 </Window>
