--- a/Module19_WPF/WpfApp1/MainWindow.xaml
+++ b/Module19_WPF/WpfApp1/MainWindow.xaml
@@ -14,7 +14,7 @@
         <viewModel:MainViewModel/>
     </Window.DataContext>
     
-    <Border Background="#272537"
+    <Border Background="#FF2F2D3B"
         CornerRadius="25">
         <Grid>
             <Grid.ColumnDefinitions>
