--- a/Module20_WPF_Testing/FamillyBrowservV2/MainWindow.xaml
+++ b/Module20_WPF_Testing/FamillyBrowservV2/MainWindow.xaml
@@ -11,10 +11,11 @@
         WindowStartupLocation="CenterOwner"
         WindowStyle="None" ResizeMode="NoResize"
         Background="{x:Null}"
-        AllowsTransparency="True"
-        >
+        AllowsTransparency="True">
+
     <Grid>
         <MaterialDesign:Card Margin="10"
+                             Background="{DynamicResource SideBarBackGroundBrush}"
                              UniformCornerRadius="20">
             <Grid>
                 <Grid.ColumnDefinitions>
@@ -26,13 +27,14 @@
                     <Style TargetType="MaterialDesign:PackIcon">
                         <Setter Property="Width" Value="30"/>
                         <Setter Property="Height" Value="30"/>
+                        <Setter Property="Foreground" Value="{DynamicResource ForeGroundBrush}"/>
                     </Style>
                 </Grid.Resources>
 
                 <!-- Menu --> 
                 <Grid Grid.Column="0">
                     <ListView Margin="0 40">
-                        
+
                         <ListViewItem HorizontalAlignment="Center"
                                       Margin="0 10 0 0">
                             <Button Style="{StaticResource MaterialDesignFloatingActionButton}"
@@ -43,7 +45,7 @@
                                 </StackPanel>
                             </Button>
                         </ListViewItem>
-                        
+
                         <ListViewItem HorizontalAlignment="Center"
                                       Margin="0">
                             <Button Style="{StaticResource MaterialDesignFloatingActionButton}"
@@ -71,20 +73,63 @@
                                       >
                             <Button Style="{StaticResource MaterialDesignFloatingActionButton}"
                                     HorizontalAlignment="Left"
-                                    BorderBrush="{x:Null}" Background="{x:Null}" Foreground="Black">
+                                    BorderBrush="{x:Null}" Background="{x:Null}" Foreground="Black"
+                                    Click="CloseApp">
                                 <StackPanel Margin="-5">
                                     <MaterialDesign:PackIcon Kind="ExitToApp"/>
                                 </StackPanel>
                             </Button>
                         </ListViewItem>
 
+                        <ListViewItem HorizontalAlignment="Center"
+                                      Margin="0"
+                                      >
+                            <ToggleButton Height="56" Width="56"
+                                          BorderBrush="{x:Null}" Background="{x:Null}" 
+                                          Checked="ToggleButton_Checked"
+                                          Unchecked="ToggleButton_Checked"
+                                          Style="{StaticResource MaterialDesignFloatingActionButton}">
+                                <ToggleButton.Template>
+                                    <ControlTemplate>
+                                        <Border x:Name="SwitchBoder"
+                                                Width="35" Height="18"
+                                                CornerRadius="9"
+                                                Background="{DynamicResource BackgroundBrush}">
+                                            <Border x:Name="SwitchShape" 
+                                                    Width="14" Height="14"
+                                                    CornerRadius="8"
+                                                    Margin="3 0 3 0" HorizontalAlignment="Left"
+                                                    Background="{DynamicResource ForeGroundBrush}">
+                                                <Border.Effect>
+                                                    <DropShadowEffect Opacity=".2"/>
+                                                </Border.Effect>
+                                            </Border>
+                                        </Border>
+
+                                        <ControlTemplate.Triggers>
+                                            <Trigger Property="ToggleButton.IsChecked" Value="False">
+                                                <Setter TargetName="SwitchShape" Property="Background" Value="{DynamicResource ForeGroundBrush}"/>
+                                            </Trigger>
+                                            <Trigger Property="ToggleButton.IsChecked" Value="True">
+                                                <Setter TargetName="SwitchShape" Property="HorizontalAlignment" Value="Right"/>
+                                                <Setter TargetName="SwitchShape" Property="Background" Value="{DynamicResource ForeGroundBrush}"/>
+                                            </Trigger>
+                                        </ControlTemplate.Triggers>
+                                        
+                                    </ControlTemplate>
+                                </ToggleButton.Template>
+                                
+                            </ToggleButton>
+
+
+                        </ListViewItem>
+
                     </ListView>
-                    
                 </Grid>
                 
                 <!-- RenderPannel -->
                 <Grid Grid.Column="1"
-                      Background="#F6F5F8" Name="RenderPages">
+                      Background="{DynamicResource BackgroundBrush}" Name="RenderPages">
                     
                 </Grid>
                 
