--- a/Module20_WPF_Testing/FamillyBrowservV2/MainWindow.xaml
+++ b/Module20_WPF_Testing/FamillyBrowservV2/MainWindow.xaml
@@ -31,7 +31,7 @@
                     </Style>
                 </Grid.Resources>
 
-                <!-- Menu --> 
+             <!-- Menu --> 
                 <Grid Grid.Column="0">
                     <ListView Margin="0 40">
 
@@ -41,7 +41,7 @@
                                     HorizontalAlignment="Left"
                                     BorderBrush="{x:Null}" Background="{x:Null}" Foreground="Black">
                                 <StackPanel Margin="-5">
-                                    <MaterialDesign:PackIcon Kind="Home"/>
+                                    <MaterialDesign:PackIcon Kind="Tea"/>
                                 </StackPanel>
                             </Button>
                         </ListViewItem>
@@ -127,9 +127,53 @@
                     </ListView>
                 </Grid>
                 
-                <!-- RenderPannel -->
+             <!-- RenderPannel -->
                 <Grid Grid.Column="1"
-                      Background="{DynamicResource BackgroundBrush}" Name="RenderPages">
+                      Background="{DynamicResource BackgroundBrush}">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="1*"/>
+                        <RowDefinition Height="0"/>
+                        <RowDefinition Height="6*"/>
+                    </Grid.RowDefinitions>
+                    
+                    <StackPanel Grid.Row="0"
+                                Margin="0 0 50 0"
+                                Orientation="Horizontal"
+                                VerticalAlignment="Center"
+                                HorizontalAlignment="Right"
+                                >
+
+                        <TextBox Width="500"
+                             Height="56"
+                             VerticalAlignment="Center"
+                             HorizontalAlignment="Left"
+                             Margin="0 5 0 5"
+                             Grid.Column="1"
+                             Style="{StaticResource ModerneTexBox}"
+                             Background="{DynamicResource SideBarBackGroundBrush}"/>
+
+                        <Button Style="{StaticResource MaterialDesignFloatingActionButton}"
+                                BorderBrush="{x:Null}" Background="{x:Null}"
+                                Margin="0 0 25 0"
+                                >
+                            <StackPanel Margin="-5">
+                                <MaterialDesign:PackIcon Kind="FilterOutline"/>
+                            </StackPanel>
+                        </Button>
+                        
+                        <Button Style="{StaticResource MaterialDesignFloatingActionButton}"
+                                BorderBrush="{x:Null}" Background="{x:Null}"
+                                >
+                            <StackPanel Margin="-5">
+                                <MaterialDesign:PackIcon Kind="UserOutline"/>
+                            </StackPanel>
+                        </Button>
+
+                    </StackPanel>
+
+                    <Grid x:Name="RenderPages" Grid.Row="1">
+                        
+                    </Grid>
                     
                 </Grid>
                 
