--- a/Module20_WPF_Testing/FamillyBrowservV2/MainWindow.xaml
+++ b/Module20_WPF_Testing/FamillyBrowservV2/MainWindow.xaml
@@ -150,7 +150,7 @@
                              Margin="0 5 0 5"
                              Grid.Column="1"
                              Style="{StaticResource ModerneTexBox}"
-                             Background="{DynamicResource SideBarBackGroundBrush}"/>
+                             Background="{DynamicResource SideBarBackGroundBrush}" Text="azeaze"/>
 
                         <Button Style="{StaticResource MaterialDesignFloatingActionButton}"
                                 BorderBrush="{x:Null}" Background="{x:Null}"
